KULRICE-2931: Action Lists are taking a long time to load https://test.kuali.org/jira/browse/KULRICE-2931
ActionListAction:
- Refactored to use global ErrorMap instead of ActionErrors.
- Minor cleanup based on FindBugs markers, e.g. 'Boolean.valueOf(...)'
  instead of 'new Boolean(...)'.
- Cleaned up string constants